# Calcular-JurosCompostos

./: README.md  calculator.py  gerador_pdf.py  index.html  main.py  pyproject.toml  pyscript.json  style.css
projeto-Algoritmos/: .gitignore
tests/: test_calculator.py
