[project]
name = "projeto-algoritmos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyscript>=0.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
testpaths = [
    "tests",
]
